--- a/exercicios/exercicio035/Interfaces/src/View/TelaPrincipal.form
+++ b/exercicios/exercicio035/Interfaces/src/View/TelaPrincipal.form
@@ -13,6 +13,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cadastrar Alunos"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="c_alunosActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="g_alunos">
               <Properties>
